5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1616_2940.log
== SUBMITION (2019-04-01 14:12:21) 
-- CODE:
vi=float(input"valor inicial:")
j=float(input"taxa de juros:")
n=float(input"tempo perdido:")
vf=vi*(1+j)**n
print(round(vf,  2))
-- EXECUTION TIME:
0.118877
-- ERROR:
  File "/home/codebench/codes/1616/2940/main.py", line 1
    vi=float(input"valor inicial:")
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:13:04) 
-- CODE:
vi=float(input"valor inicial: ")
j=float(input"taxa de juros: ")
n=float(input"tempo perdido: ")
vf=vi*(1+j)**n
print(round(vf,  2))
-- EXECUTION TIME:
0.22912
-- ERROR:
  File "/home/codebench/codes/1616/2940/main.py", line 1
    vi=float(input"valor inicial: ")
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:13:48) 
-- CODE:
vi=float(input"valor inicial: ")
j=float(input"taxa de juros: ")
n=float(input"tempo perdido: ")
vf=vi*(1+j)**n
print(round(vf, 2))
-- EXECUTION TIME:
0.132897
-- ERROR:
  File "/home/codebench/codes/1616/2940/main.py", line 1
    vi=float(input"valor inicial: ")
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:17:18) 
-- CODE:
vi=float(input"valor inicial: ")
j=float(input"taxa de juros: ")
n=float(input"tempo em meses : ")
vf=vi*(1+j)**n
print(round(vf, 2))
-- EXECUTION TIME:
0.150747
-- ERROR:
  File "/home/codebench/codes/1616/2940/main.py", line 1
    vi=float(input"valor inicial: ")
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:17:22) 
-- CODE:
vi=float(input"valor inicial: ")
j=float(input"taxa de juros: ")
n=float(input"tempo em meses : ")
vf=vi*(1+j)**n
print(round(vf, 2))
-- EXECUTION TIME:
0.138589
-- ERROR:
  File "/home/codebench/codes/1616/2940/main.py", line 1
    vi=float(input"valor inicial: ")
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:17:32) 
-- CODE:
vi=float(input"valor inicial: ")
j=float(input"taxa de juros: ")
n=float(input"tempo em meses: ")
vf=vi*(1+j)**n
print(round(vf, 2))
-- EXECUTION TIME:
0.172352
-- ERROR:
  File "/home/codebench/codes/1616/2940/main.py", line 1
    vi=float(input"valor inicial: ")
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:17:35) 
-- CODE:
vi=float(input"valor inicial: ")
j=float(input"taxa de juros: ")
n=float(input"tempo em meses: ")
vf=vi*(1+j)**n
print(round(vf, 2))
-- EXECUTION TIME:
0.138709
-- ERROR:
  File "/home/codebench/codes/1616/2940/main.py", line 1
    vi=float(input"valor inicial: ")
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:18:41) 
-- CODE:
vi=float(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=float(input("tempo em meses: "))
vf=vi*(1+j)**n
print(round(vf, 2))
-- EXECUTION TIME:
0.15058
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
24798.08
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
13322.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
